--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
         <section id="landing-section" class="phase-container">
             <h1 class="game-logo-clean" style="font-size: 4rem; text-align: center; margin-bottom: 50px;">
         <span class="glow-blue">BLUFF</span> <span class="glow-pink">IT</span>
+                <br>
+                T <span class="flip">T</span>
     </h1>
             <div class="menu-buttons">
                 <button id="btn-create-room" class="btn neon-btn-pink">Raum erstellen</button>
@@ -138,3 +140,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
