--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nobody is Perfect Clone</title>
+    <title>Bluff IT by TT</title>
     <link rel="stylesheet" href="style.css">
     <script src="/socket.io/socket.io.js"></script>
 </head>
@@ -140,4 +140,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
