--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
                     <button id="btn-show-results" class="btn neon-btn-green hidden">Voting beenden (Verteilung zeigen)</button>
                     
                     <button id="btn-reveal-answer" class="btn neon-btn-green hidden">Richtige Antwort markieren</button>
-                    <button id="btn-reveal-authors" class="btn neon-btn-blue hidden">Autoren aufdecken</button>
+                    <!--<button id="btn-reveal-authors" class="btn neon-btn-blue hidden">Autoren aufdecken</button>-->
                     <button id="btn-start-next-round" class="btn neon-btn-pink hidden">Nächste Runde</button>
                 </div>
 
